# grlx-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  go.mod  go.sum
.github/workflows/: ci.yml
cmd/grlx-lsp/: main.go
internal/lsp/: codeaction.go  completion.go  completion_test.go  definition.go  definition_test.go  diagnostics.go  diagnostics_test.go  handler.go  handler_test.go  hover.go  hover_test.go  semantic.go  semantic_test.go
internal/recipe/: include.go  include_test.go  recipe.go  recipe_test.go
internal/schema/: schema.go  schema_test.go
src/: main.rs
