[package]
name = "grlx-lsp"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
nom = "7.1.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
