[package]
name = "grlx-lsp"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
lsp-server = "0.7.9"
lsp-types = "0.95.1"
nom = "7.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
